Unit-test improvement

--- a/FizzBuzz/FizzBuzz.ipynb
+++ b/FizzBuzz/FizzBuzz.ipynb
@@ -65,16 +65,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fizz_buzz(numbers):\n",
+    "def fizz_buzz(numbers, output):\n",
     "    for i in numbers:\n",
     "        if (mul_3(i) and mul_5(i)):\n",
-    "            print('fizzbuzz')\n",
+    "            output.append('fizzbuzz')\n",
     "        elif (mul_3(i)):\n",
-    "            print('buzz')     \n",
+    "            output.append('buzz')     \n",
     "        elif (mul_5(i)):\n",
-    "            print('fizz')\n",
+    "            output.append('fizz')\n",
     "        else:\n",
-    "            print(i)"
+    "            output.append(i)"
    ]
   },
   {
@@ -84,8 +84,9 @@
    "outputs": [],
    "source": [
     "def test_normal():\n",
-    "    arr = [1, 2, 3, 5, 15]\n",
-    "    fizz_buzz(arr)"
+    "    arr, output = [1, 2, 3, 5, 15], []\n",
+    "    fizz_buzz(arr, output)\n",
+    "    print (output == [1, 2, 'buzz', 'fizz', 'fizzbuzz'])"
    ]
   },
   {
@@ -95,8 +96,9 @@
    "outputs": [],
    "source": [
     "def test_big_numbers():\n",
-    "    arr = [535555555555, 5500000000000000000000000, 10, 15, 35, 0, -2, -67, -55]\n",
-    "    fizz_buzz(arr)"
+    "    arr, output = [535555555555, 5500000000000000000000000, 10, 15, 35, 0, -2, -67, -55], []\n",
+    "    fizz_buzz(arr, output)\n",
+    "    print (output == ['fizz', 'fizz', 'fizz', 'fizzbuzz', 'fizz', 'fizzbuzz', -2, -67, 'fizz'])"
    ]
   },
   {
@@ -106,8 +108,9 @@
    "outputs": [],
    "source": [
     "def test_double():\n",
-    "    arr = [0.1, 0.02, 0.0003]\n",
-    "    fizz_buzz(arr)"
+    "    arr, output = [0.1, 0.02, 0.0003], []\n",
+    "    fizz_buzz(arr, output)\n",
+    "    print (output == [0.1, 0.02, 0.0003])"
    ]
   },
   {
@@ -117,8 +120,9 @@
    "outputs": [],
    "source": [
     "def test_word():\n",
-    "    arr = ['Acronis', 0, 333, 450]\n",
-    "    fizz_buzz(arr)"
+    "    arr, output = ['Acronis', 0, 333, 450], []\n",
+    "    fizz_buzz(arr, output)\n",
+    "    print (output == ['Acronis', 'fizzbuzz', 'buzz', 'fizzbuzz'])"
    ]
   },
   {
@@ -128,8 +132,9 @@
    "outputs": [],
    "source": [
     "def test_input():\n",
-    "    arr = [int(x) for x in input().split()]\n",
-    "    fizz_buzz(arr)"
+    "    arr, output = [int(x) for x in input().split()], []\n",
+    "    fizz_buzz(arr, output)\n",
+    "    print (output)"
    ]
   },
   {
@@ -141,11 +146,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "2\n",
-      "buzz\n",
-      "fizz\n",
-      "fizzbuzz\n"
+      "True\n"
      ]
     }
    ],
@@ -162,15 +163,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fizz\n",
-      "fizz\n",
-      "fizz\n",
-      "fizzbuzz\n",
-      "fizz\n",
-      "fizzbuzz\n",
-      "-2\n",
-      "-67\n",
-      "fizz\n"
+      "True\n"
      ]
     }
    ],
@@ -187,9 +180,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.1\n",
-      "0.02\n",
-      "0.0003\n"
+      "True\n"
      ]
     }
    ],
@@ -206,37 +197,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acronis\n",
-      "fizzbuzz\n",
-      "buzz\n",
-      "fizzbuzz\n"
+      "True\n"
      ]
     }
    ],
    "source": [
     "test_word()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 2 3 4 5\n",
-      "1\n",
-      "2\n",
-      "buzz\n",
-      "4\n",
-      "fizz\n"
-     ]
-    }
-   ],
-   "source": [
-    "test_input()"
    ]
   }
  ],
